--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numpy==1.20.1
 opencv-python==4.5.1.48
 pandas==1.2.2
 Pillow==8.1.0
+pymediainfo==5.0.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
@@ -18,3 +19,6 @@ scipy==1.6.0
 Shapely==1.7.1
 six==1.15.0
 tifffile==2021.2.1
+torch==1.8.0
+torchvision==0.9.0
+typing-extensions==3.7.4.3
